# PSN2-EDT

./: .env  Cargo.toml  index.html
migrations/2023-10-03-091538_create_course/: down.sql  up.sql
src/: discord.rs  main.rs  models.rs  schedule.rs  schema.rs
