[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.6"
tokio = { version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["unstable-locales"] }
diesel = { version = "2.1.2", features = ["mysql", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
diesel_migrations = "2.1.0"
axum = "0.6.20"
dotenv = "0.15.0"